# nfe-scanner

./: Product Requirements Document (PRD) - Arquivamento de NF-e.md  README.md  pyproject.toml
nfe_scanner/: main.py
nfe_scanner/ui/: main_window.py
