[tool.poetry]
name = "nfe-scanner"
version = "0.1.0"
description = ""
authors = ["GuilhermeKulkamp <guilhermekulkamp@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pysimplegui = "^5.0.8.3"
sqlmodel = "^0.0.27"
playwright = "^1.55.0"
beautifulsoup4 = "^4.14.2"
opencv-python = "^4.12.0.88"
pyzbar = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
pytest-cov = "^7.0.0"
black = "^25.9.0"
isort = "^7.0.0"
ruff = "^0.14.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# --- Configurações de Qualidade de Código e Testes ---

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "B", "C90", "W"]
ignore = ["E501"]                         # Ignora E501 (line too long) pois o Black e Ruff cuidam disso
target-version = "py312"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=nfe_scanner --cov-report=term-missing"
testpaths = ["tests"]
